--- a/app/src/main/res/layout/eld_device_list_layout.xml
+++ b/app/src/main/res/layout/eld_device_list_layout.xml
@@ -58,6 +58,7 @@
             android:layout_marginTop="@dimen/_20sdp">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvBlutoothList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
