--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -2,14 +2,62 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.GraphFragment">
+    android:layout_height="@dimen/_160sdp">
 
     <!-- TODO: Update blank fragment layout -->
-    <ImageView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Off"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textSize="@dimen/_8ssp"
+                android:layout_marginTop="@dimen/_24sdp"
+                android:textColor="@android:color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SP"
+                android:layout_marginTop="@dimen/_24sdp"
+                android:textSize="@dimen/_8ssp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textColor="@android:color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="D"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_24sdp"
+                android:textSize="@dimen/_8ssp"
+                android:textColor="@android:color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ND"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_24sdp"
+                android:textSize="@dimen/_8ssp"
+                android:textColor="@android:color/black"/>
+        </LinearLayout>
+        <com.eld.besteld.paint.DrawView
+            android:id="@+id/graph"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_160sdp"
+            android:layout_marginStart="@dimen/_4sdp"
+            android:background="@mipmap/bg_graph"
+            android:text="@string/hello_blank_fragment" />
+    </LinearLayout>
+
 
 </FrameLayout>
