--- a/app/src/main/res/layout/fragment_inspection2.xml
+++ b/app/src/main/res/layout/fragment_inspection2.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.InspectionFragment">
 
     <LinearLayout
@@ -15,6 +16,7 @@
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30sdp"
             android:orientation="horizontal">
 
             <RadioButton
@@ -28,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_60sdp"
                 android:paddingStart="@dimen/_10sdp"
-                android:text="Pre Trip" />
+                android:text="Post Trip" />
         </RadioGroup>
 
 
@@ -60,6 +62,32 @@
             android:layout_height="@dimen/_100sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:background="@drawable/dotted_drawable_background"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_marginBottom="@dimen/_30sdp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:backgroundTint="@drawable/button_background"
+                android:text="CANCEL"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/_14ssp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="CONFIRM"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/_14ssp"
+                app:backgroundTint="@drawable/button_background" />
+        </LinearLayout>
 
     </LinearLayout>
 </FrameLayout>
