--- a/app/src/main/res/drawable/circular_white_background.xml
+++ b/app/src/main/res/drawable/circular_white_background.xml
@@ -2,11 +2,12 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-
+<stroke android:width="@dimen/_6sdp"
+    android:color="@color/white"/>
     <solid
-        android:color="@android:color/white"/>
+        android:color="#F7B900"/>
 
     <size
-        android:width="@dimen/_40sdp"
-        android:height="@dimen/_40sdp"/>
+        android:width="@dimen/_38sdp"
+        android:height="@dimen/_38sdp"/>
 </shape>
