--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -20,13 +20,13 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:textSize="@dimen/_8ssp"
-                android:layout_marginTop="@dimen/_24sdp"
+                android:layout_marginTop="40dp"
                 android:textColor="@android:color/black"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SP"
-                android:layout_marginTop="@dimen/_24sdp"
+                android:layout_marginTop="24dp"
                 android:textSize="@dimen/_8ssp"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -37,7 +37,7 @@
                 android:text="D"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_24sdp"
+                android:layout_marginTop="24dp"
                 android:textSize="@dimen/_8ssp"
                 android:textColor="@android:color/black"/>
             <TextView
@@ -46,7 +46,7 @@
                 android:text="ND"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_24sdp"
+                android:layout_marginTop="26dp"
                 android:textSize="@dimen/_8ssp"
                 android:textColor="@android:color/black"/>
         </LinearLayout>
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_160sdp"
             android:layout_marginStart="@dimen/_4sdp"
-            android:background="@mipmap/bg_graph"
+            android:background="@drawable/graph_one"
             android:text="@string/hello_blank_fragment" />
     </LinearLayout>
 
