--- a/app/src/main/res/layout/driver_information_recycler_layout.xml
+++ b/app/src/main/res/layout/driver_information_recycler_layout.xml
@@ -20,34 +20,38 @@
 
         <TextView
             android:id="@+id/tvNotes"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
             android:text="Inspectoin before driving"/>
         <TextView
             android:id="@+id/tvLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""/>
+            android:textSize="@dimen/_8ssp"/>
 
     </LinearLayout>
     <TextView
-        android:id="@+id/tvstartDate"
+        android:id="@+id/tvstarttime_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:textSize="@dimen/_8ssp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:text=""/>
+        android:textColor="@color/black"
+        android:text="12"
+        android:layout_marginEnd="@dimen/_10sdp" />
     <TextView
-        android:id="@+id/tvendDate"
+        android:id="@+id/tvEndtime_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_8ssp"
+        android:textColor="@color/black"
         android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:text=""/>
+        android:text="14"/>
 
 
 
